# google-merchant-feed-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  test---.pre-commit-config.yaml
.github/workflows/: ci.yml
src/: db.py  jobs.py  locks.py  main.py  scheduler.py  sheets.py  sync.py
tests/: conftest.py  test_db.py  test_locks.py  test_main.py  test_mapping.py  test_sheets.py  test_sync.py
